--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,36 +1,116 @@
 @import './utils/reset';
 
-.vertical-section{
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+* {
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
-main {
-    overflow-x: hidden;
-    display: flex;
-    position: sticky;
-    top:0;
+
+
+a {
+  text-decoration: none;
+}
+ul {
+  list-style: none;
 }
 
-h1 {
-    margin: 0;
-    padding: 0;
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+  background: white;
+  padding: 30px;
+  text-align: center;
+  
+}
+header nav a {
+  padding: 10px 25px;
+  font-size: 2rem;
+  color: black;
+  border-radius: 10px;
+}
+header nav a:hover,
+header nav a.active {
+  background: #66806A;
+  color: white;
+  transition: 0.3s ease-out;
+  letter-spacing: 2px;
 }
 
 section {
-    min-width: 50vw;
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 4ch;
-    transition: all 1s;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-section:nth-child(even) {
-    background-color: teal;
-    color: white;
+section .container {
+  margin: 100px;
 }
+section h1 {
+  font-size: 3rem;
+  margin: 20px;
+}
+section h2 {
+  font-size: 40px;
+  text-align: center;
+  text-transform: uppercase;
+}
+section .text-container {
+  display: flex;
+}
+section .text-container .text-box {
+  margin: 20px;
+  padding: 20px;
+  background: #66806A;
+  border-radius: 20px;
+}
+section .text-container .text-box h3 {
+  font-size: 30px;
+  text-align: center;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+
+@media (max-width: 900px) {
+  section h1 {
+    font-size: 2rem;
+    text-align: center;
+  }
+  section .text-container {
+    flex-direction: column;
+  }
+}
+
+.reveal {
+  position: relative;
+  transform: translateY(150px);
+  opacity: 0;
+  transition: 2s all ease;
+}
+
+.reveal.active {
+  transform: translateY(0);
+  opacity: 1;
+}
+
+#home h1 {
+    animation-timing-function: ease-in-out;
+    animation-duration: 1.5s;
+    animation-name:slidein;
+}
+
+@keyframes slidein {
+    from {
+        transform-origin: 0 0;
+        transform: translate(200px, 100px) rotate(45deg);
+    }
+
+    to {
+        transform-origin: 0 0;
+        transform:translate(0px, 0px) rotate(0deg) ;
+    }
     
+}
