--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,36 +1,37 @@
 @import './utils/reset';
 
-.vertical-section{
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+// scroll js
+// .vertical-section{
+//     height: 100vh;
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+// }
 
-main {
-    overflow-x: hidden;
-    display: flex;
-    position: sticky;
-    top:0;
-}
+// main {
+//     overflow-x: hidden;
+//     display: flex;
+//     position: sticky;
+//     top:0;
+// }
 
-h1 {
-    margin: 0;
-    padding: 0;
-}
+// h1 {
+//     margin: 0;
+//     padding: 0;
+// }
 
-section {
-    min-width: 50vw;
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 4ch;
-    transition: all 1s;
-}
+// section {
+//     min-width: 50vw;
+//     min-height: 100vh;
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     font-size: 4ch;
+//     transition: all 1s;
+// }
 
-section:nth-child(even) {
-    background-color: teal;
-    color: white;
-}
+// section:nth-child(even) {
+//     background-color: teal;
+//     color: white;
+// }
     
